--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,20 @@ repositories {
 	mavenCentral()
 }
 
+task stage(type: Copy, dependsOn: [clean, build]) {
+    from jar.archivePath
+    into project.rootDir
+    rename {
+        'app.jar'
+    }
+}
+
+stage.mustRunAfter(clean)
+
+clean << {
+    project.file('app.jar').delete()
+}
+
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter')
