--- a/build.gradle
+++ b/build.gradle
@@ -25,19 +25,7 @@ repositories {
 	mavenCentral()
 }
 
-task stage(type: Copy, dependsOn: [clean, build]) {
-    from jar.archivePath
-    into project.rootDir
-    rename {
-        'app.jar'
-    }
-}
-
-stage.mustRunAfter(clean)
-
-clean << {
-    project.file('app.jar').delete()
-}
+task stage(dependsOn: bootRepackage)
 
 
 dependencies {
