--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,9 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter')
     compile('org.springframework.boot:spring-boot-starter-web')
-	testCompile('org.springframework.boot:spring-boot-starter-test') 
+	testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.2.2'
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.2.2'
 }
 
 task stage(dependsOn: bootRepackage)
