--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,11 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter')
     compile('org.springframework.boot:spring-boot-starter-web')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile group: 'joda-time', name: 'joda-time', version: '2.9.4'
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.2.2'
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.2.2'
+
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
 task stage(dependsOn: bootRepackage)
