--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,9 @@ dependencies {
     compile group: 'joda-time', name: 'joda-time', version: '2.9.4'
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.6.0'
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.6.0'
-
+    compile group: 'de.jollyday', name: 'jollyday', version: '0.5.1'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
